--- a/style.css
+++ b/style.css
@@ -110,24 +110,21 @@ b{
     font-size: 12px;
 }
 #range{
-    -webkit-appearance: none;
     --scrollbar-background: linear-gradient(90deg, #a1f2e9 50%, #ebeffb 50%);
     margin: 30px 0;
     width: 100%;
 }
-#range::-webkit-slider-runnable-track {
-    -webkit-appearance: none;
+#range::-webkit-slider-runnable-track, #range::-moz-range-track {
     width: 100%;
     height: 6px;
     border-radius: 3px;
     background: var(--scrollbar-background);
 }
-#range::-webkit-slider-thumb {
-    -webkit-appearance: none;
+#range::-webkit-slider-thumb, #range::-moz-range-thumb {
     box-shadow: 0px 5px 25px rgba(21,213,196,0.5);
     height: 30px;
     width: 30px;
-    border-radius: 15px;
+    border-radius: 100%;
     cursor: pointer;
     margin-top: -12px;
     border: 1px solid #2dccbc;
@@ -135,6 +132,9 @@ b{
     background-repeat: no-repeat;
     background-size: 20px;
     background-position: 4px 8px;
+}
+#range::-moz-range-thumb {
+    background-position: 5px 9px;
 }
 #checkbox_slider{
     width: 35px;
@@ -215,7 +215,4 @@ b{
     section{
         background-size: 100vw auto;
     }
-  }
-
-
-
+}
